cabal-version:      2.4
name:               cardano-secondary-market
version:            0.1.0.0

synopsis: A distributed Cardano P2P secondary market dApp PoC.
license: Apache-2.0
author: fallen-icarus
maintainer: modern.daidalos+git@gmail.com
copyright: 2023 fallen-icarus
extra-source-files: CHANGELOG.md

common lang
  build-depends: base ^>=4.14
  default-language: Haskell2010
  ghc-options: -Wall -Wredundant-constraints

library
  import: lang
  exposed-modules: CardanoSecondaryMarket
  build-depends:
    plutus-ledger,
    plutus-ledger-api,
    plutus-core,
    plutus-tx-plugin,
    plutus-tx,
    plutus-script-utils,
    cardano-api,
    bytestring,
    serialise,
    aeson,
    plutonomy,
    text
  hs-source-dirs: src
  ghc-options: 
    -fobject-code 
    -fno-ignore-interface-pragmas 
    -fno-omit-interface-pragmas 
    -fno-specialise

executable cardano-secondary-market
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.14.3.0
    hs-source-dirs:   app
    default-language: Haskell2010
